--- a/sections/home-banner.liquid
+++ b/sections/home-banner.liquid
@@ -1,8 +1,12 @@
 <div id="add_area">
+
     {%- if section.settings.top_banner != blank -%}
     <div id="visual">
       <div class="slides">
-        <img src="{{ '5c276da8c125fe0afabffb3f2f21f18b.jpg' | asset_url }}">		
+        <img src="{{ section.settings.top_banner | img_url: 'master' }}">	
+        <!--
+        <img src="{{ '5c276da8c125fe0afabffb3f2f21f18b.jpg' | asset_url }}">
+        -->
       </div>
       <div class="slides">
         <img src="{{ '1px.png' | asset_url }}">	
@@ -20,41 +24,44 @@
         <img src="{{ '1px.png' | asset_url }}">	
       </div>
     </div>
-    {%- endif -%}
-
+    {%- endif -%}	
+    
+    {%- if section.settings.main_menu.links != blank -%}
     <div id="info" class="clearfix">
       <div class="crim sec-ttl col-left">
         <span class="bar"></span>
       </div><div class="col-right">
       <ul>
-        <li>
+        {%- for link in section.settings.main_menu.links -%}
+          <li>
             <div class="ttl yumin">
-              <a href="https://www.momosale.com/items/54121557">
-              ✿発送期間＆送料＆クーポン券のご利用
+              <a href="{{ link.url }}">
+                {{ link.title }}
               </a>													
             </div>
-        </li>
-        <li>	
-            <div class="ttl yumin">
-                <a href="https://www.momosale.com/categories/2139682">
-                  ✿メンズファッション（ペアルック）
-                </a>													
-            </div>
-        </li>
-        <li>
-            <div class="ttl yumin">
-              ✿Black Fridayクーポンコード：black2021
-            </div>
-        </li>
+          </li>
+        {%- endfor -%}
       </ul>
       </div>
     </div>
+    {%- endif -%}	
 
+    {%- if section.settings.buttom_banner != blank -%}
     <div class="bnr">
-      <a href="https://www.momosale.com/categories/2139671">
+      <a
+      {%- if section.settings.buttom_banner_url != blank -%}
+        href="{{ section.settings.buttom_banner_url }}"
+      {%- endif -%}
+      >
+
+        <img src="{{ section.settings.buttom_banner | img_url: 'master' }}">
+        <!--
         <img src="https://base-ec2.akamaized.net/images/user/template/csqt1108/image-bnr_5eef6b0a86226.jpg">
+        -->
       </a>
     </div>
+    {%- endif -%}	
+
 </div>
 
 {% schema %}
@@ -65,6 +72,12 @@
         "type": "image_picker",
         "id": "top_banner",
         "label": "t:sections.home-banner.settings.top_banner.label"
+    },
+    {
+      "type": "link_list",
+      "id": "main_menu",
+      //"default": "main-menu",
+      "label": "t:sections.home-banner.settings.main_menu.label"
     },
     {
         "type": "image_picker",
