--- a/sections/div_header.liquid
+++ b/sections/div_header.liquid
@@ -60,7 +60,7 @@
 </header>
 
 <div id="search" class="searchbox">
-    <form id="x_itemSearchForm" class="itemSearch__form" action="{{ routes.search_url }} method="get">
+    <form id="x_itemSearchForm" class="itemSearch__form" action="{{ routes.search_url }}" method="get">
     <input 
         class="itemSearch__field yumin"
         type="text"
