--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -141,6 +141,15 @@
     {{ content_for_header }}
   </head>
 
+  {%- assign now_route_ = canonical_url | replace: shop.url , "" -%}
+  {%- assign now_route = now_route_ | replace: routes.root_url , "" -%}
+
+  {%- if now_route and (now_route == 'cart' or now_route == 'account' or now_route == "accountlogin" or now_route == 'accountregister' or now_route == 'accountaddresses' or now_route == '404' ) -%}
+      {%- assign account = true -%}
+  {%- else-%}
+      {%- assign account = false -%}
+  {%- endif -%}
+
   {{ 'emmmmm.css' | asset_url | stylesheet_tag }}
 
   <body class="shop template " id="">
@@ -168,183 +177,8 @@
     <!-- /sb-site -->
 
     <!--slidebars右侧边栏-->
-    <div class="sb-slidebar sb-right sb-style-push sb-momentum-scrolling">
-      <nav class="crim">
-        <ul>
-          <li>
-            <a class="mainHeaderNavColor" href="#">HOME</a>
-          </li>
-          <li>
-            <a class="mainHeaderNavColor" href="#">ABOUT</a>
-          </li>
-          <li>
-            <div id="category-menu">
-              <span class="mainHeaderNavColor">CATEGORY</span>							
-              <div class="category-list">
-                <ul id="appsItemCategoryTag">
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿【サプライズ ボックス】特集</a>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿新入荷</a>
-                    <ul class="appsItemCategoryTag_lowerchild">
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛11月11日新入荷</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛11月08日新入荷</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛11月06日新入荷</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛11月04日新入荷</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿人気アイテム</a>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿トップス</a>
-                    <ul class="appsItemCategoryTag_lowerchild">
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛Tシャツ</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛パーカー</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛シャツ</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛キャミソール</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛セーター</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿ボトムス</a>
-                    <ul class="appsItemCategoryTag_lowerchild">
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛カジュアルパンツ</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛デニムパンツ</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛スカート</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛ショートパンツ</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿アウター</a>
-                    <ul class="appsItemCategoryTag_lowerchild">
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛ジャケット</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛コート</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛カーディガン</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛ダウンジャケット</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛UVカット</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿シューズ</a>
-                    <ul class="appsItemCategoryTag_lowerchild">
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛スニーカー</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛サンダル</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛ブーツ＆ローファー</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿セール</a>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿セットアップ</a>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿小物</a>
-                    <ul class="appsItemCategoryTag_lowerchild">
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛バッグ</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛スマホケース</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛アクセサリー</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛帽子</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛ベルト</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛靴下</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛ネクタイ</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿ワンピース</a>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿下着</a>
-                    <ul class="appsItemCategoryTag_lowerchild">
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛下着セット</a>
-                      </li>
-                      <li>
-                        <a href="#" class="mainHeaderNavColor appsItemCategoryTag_lowerLink">☛パジャマ</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿ペアルック</a>
-                  </li>
-                  <li class="appsItemCategoryTag_child">
-                    <a href="#" class="mainHeaderNavColor">✿赤字特集</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </li>
-          <li>
-            <a class="mainHeaderNavColor" href="#">CONTACT</a>
-          </li>
-          <div class="column itemSearch">
-            <form id="x_itemSearchForm" class="itemSearch__form" action="#" method="get">
-              <input class="itemSearch__field yumin" type="text" name="q" placeholder="SEARCH" value=""/>
-              <button class="itemSearch__btn" type="submit"><span id="x_iconSearch" class="mainHeaderNavColor icon-search"></span></button>
-            </form>
-          </div>
-        </ul>
-      </nav>
-    </div>
-
+    {% section 'sb-slidebar' %}
+    
     <script>
       window.routes = { 
       	cart_add_url: '{{ routes.cart_add_url }}',
