--- a/sections/home-product.liquid
+++ b/sections/home-product.liquid
@@ -1,41 +1,22 @@
 {%- if section.settings.collection.products.size > 0 -%}
+{%- paginate section.settings.collection.products by section.settings.products_per_page -%}
 <section id="mainContent" class="wrapper clearfix index">
-  {%- paginate section.settings.collection.products by section.settings.products_per_page -%}
-  {%- for product in section.settings.collection.products -%}
+  {% assign start = paginate.current_page | minus: 1 %}
+  {% assign product_start = start | times: section.settings.products_per_page  %}
+
   <div class="ItemListInner crim">
-    <div class="item">
-      <div class="itemImg">
-        <a href="#">
-          <img src="https://static.thebase.in/img/apps/itemlabel/Ribbon_sale_rd.png" class="label_image list">  
-          <div class="itemThumbImg">
-            <img src="https://baseec-img-mng.akamaized.net/images/item/origin/041863dcc9b6c07c64f02c7633785d5f.jpg?imformat=generic&q=90&im=Resize,width=640,type=normal" alt="★購入条件あり★【トップス】ストリート系ファッションプリント長袖Tシャツ33021939" title="★購入条件あり★【トップス】ストリート系ファッションプリント長袖Tシャツ33021939" class="image-resize">
-          </div>
-        </a>
-      </div>
-      <a href="https://www.momosale.com/items/33021939">
-        <div class="itemTitle crim">
-          <h2>★購入条件あり★【トップス】ストリート系ファッションプリント長袖Tシャツ33021939</h2>
-        </div>
-        <ul class="itemDetail">
-          <li class="itemPrice crim">
-            <div class="sale">¥999</div>
-            <div class="discount">50%OFF</div>
-          </li>
-        </ul>
-        <ul class="itemDetail">
-          <li class="itemPrice crim">
-            <div>¥66</div>
-          </li>
-        </ul>
-      </a>
-    </div>
+    {%- for product in section.settings.collection.products offset:product_start limit: section.settings.products_per_page -%}
+    {% render 'main-product-card',
+      product_card_product: product
+    %}
+    {%- endfor -%}
   </div>
-  {%- endfor -%}
-  {%- if paginate.pages > 1 -%}
-      {% render 'paginate', paginate: paginate, anchor: '#mainContent' %}
-  {%- endif -%}
-  {%- endpaginate -%}
+
 </section>
+{%- if paginate.pages > 1 -%}
+      {% render 'paginate', paginate: paginate, anchor: '#mainContent' %}
+{%- endif -%}
+{%- endpaginate -%}
 {%- endif -%}
 
 {% schema %}
@@ -43,20 +24,20 @@
     "name": "t:sections.index_home.name",
     "settings": 
     [
-		{
-		  "type": "collection",
-      "id": "collection",
-		  "label": "t:sections.index_home.settings.collection.label"
-		},
-		{
-		   "type": "range",
-		   "id": "products_per_page",
-		   "min": 6,
-       "max": 60,
-		   "step": 1,
-		   "default": 24,
-		   "label": "t:sections.index_home.settings.products_per_page.label"
-		}
-	]
+      {
+        "type": "collection",
+        "id": "collection",
+        "label": "t:sections.index_home.settings.collection.label"
+      },
+      {
+        "type": "range",
+        "id": "products_per_page",
+        "min": 6,
+        "max": 60,
+        "step": 1,
+        "default": 6,
+        "label": "t:sections.index_home.settings.products_per_page.label"
+      }
+	  ]
   }
 {% endschema %}
